All notable changes to ampycloud will be documented in this file.

The format is inspired from [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).
This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Added:
 - [fpavogt, 2021-12-06] Setup docs, including instructions and a CI/CD "check" Action.
 - [fpavogt, 2021-12-06] Initial Github upload, incl. CI/CD actions, package & test infrastructure.
### Fixed:
### Changed:
### Deprecated:
### Removed:
### Security: